fix: change button text color from grey to black for better visibility

--- a/chamber/styles/mobile.css
+++ b/chamber/styles/mobile.css
@@ -773,7 +773,7 @@ form input[type=submit]:hover {
     margin: 1rem 10px;
     grid-area: address;
     font-style: normal;
-    color: #666;
+    color: black;
 }
 
 #interest-container #interest-card button {
